tried to fix layout shift lets see what happens

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   html {
     font-family: specter, sans-serif;
     font-family: lorimer-no-2, sans-serif;
+    font-display: swap;
   }
 }
 
